{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 1166,
  "lineage": "556004f6-dcb7-37ff-f03f-cf490142593d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-034ef063f3c627069",
            "domain": "vpc",
            "id": "eipalloc-034ef063f3c627069",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-233-188-6.compute-1.amazonaws.com",
            "public_ip": "3.233.188.6",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "api_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b9a603c10937a61b",
            "arn": "arn:aws:ec2:us-east-1:994360724404:instance/i-0a1a62bd8201f1d35",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a1a62bd8201f1d35",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "v-main-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-02ca4558a78d3c993"
              }
            ],
            "primary_network_interface_id": "eni-02ca4558a78d3c993",
            "private_dns": "ip-10-123-2-50.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.123.2.50",
            "public_dns": "ec2-44-192-85-38.compute-1.amazonaws.com",
            "public_ip": "44.192.85.38",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-013bef102c1ef3628",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e14f4f004e9284fb",
            "tags": {
              "Name": "payments-ubuntu-api-server"
            },
            "tags_all": {
              "Name": "payments-ubuntu-api-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0eadd36fb70723d7f"
            ]
          },
          "dependencies": [
            "aws_network_interface.nic_private",
            "aws_security_group.allow_backend",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b9a603c10937a61b",
            "arn": "arn:aws:ec2:us-east-1:994360724404:instance/i-06c50d2d610c0037a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06c50d2d610c0037a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "v-main-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0c595f37be27184da"
              }
            ],
            "primary_network_interface_id": "eni-0c595f37be27184da",
            "private_dns": "ip-10-123-2-51.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.123.2.51",
            "public_dns": "ec2-34-205-177-47.compute-1.amazonaws.com",
            "public_ip": "34.205.177.47",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05a8e748f4b37174a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e14f4f004e9284fb",
            "tags": {
              "Name": "customers-ubuntu-api-server"
            },
            "tags_all": {
              "Name": "customers-ubuntu-api-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0eadd36fb70723d7f"
            ]
          },
          "dependencies": [
            "aws_network_interface.nic_private",
            "aws_security_group.allow_backend",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b9a603c10937a61b",
            "arn": "arn:aws:ec2:us-east-1:994360724404:instance/i-0be6c999ee4cc8cdb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0be6c999ee4cc8cdb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "v-main-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-060987baa1bbfc5e3"
              }
            ],
            "primary_network_interface_id": "eni-060987baa1bbfc5e3",
            "private_dns": "ip-10-123-2-52.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.123.2.52",
            "public_dns": "ec2-34-200-214-127.compute-1.amazonaws.com",
            "public_ip": "34.200.214.127",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a7a64e4f98c706da",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e14f4f004e9284fb",
            "tags": {
              "Name": "loans-ubuntu-api-server"
            },
            "tags_all": {
              "Name": "loans-ubuntu-api-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0eadd36fb70723d7f"
            ]
          },
          "dependencies": [
            "aws_network_interface.nic_private",
            "aws_security_group.allow_backend",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b9a603c10937a61b",
            "arn": "arn:aws:ec2:us-east-1:994360724404:instance/i-0103df6e69e632e54",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0103df6e69e632e54",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "v-main-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-00828ffec9d18244a"
              }
            ],
            "primary_network_interface_id": "eni-00828ffec9d18244a",
            "private_dns": "ip-10-123-2-53.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.123.2.53",
            "public_dns": "ec2-3-231-213-87.compute-1.amazonaws.com",
            "public_ip": "3.231.213.87",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-061f6d72d84d34ccb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e14f4f004e9284fb",
            "tags": {
              "Name": "deposits-ubuntu-api-server"
            },
            "tags_all": {
              "Name": "deposits-ubuntu-api-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0eadd36fb70723d7f"
            ]
          },
          "dependencies": [
            "aws_network_interface.nic_private",
            "aws_security_group.allow_backend",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b9a603c10937a61b",
            "arn": "arn:aws:ec2:us-east-1:994360724404:instance/i-0d2c384fa2d8a9d2f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d2c384fa2d8a9d2f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "v-main-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-057d91a3e341ea022"
              }
            ],
            "primary_network_interface_id": "eni-057d91a3e341ea022",
            "private_dns": "ip-10-123-1-50.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.123.1.50",
            "public_dns": "ec2-18-210-12-56.compute-1.amazonaws.com",
            "public_ip": "18.210.12.56",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-051691ed958f880ef",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-037996708ecf0bb60",
            "tags": {
              "Name": "ubuntu_web_server"
            },
            "tags_all": {
              "Name": "ubuntu_web_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0468a52361e53b3a8"
            ]
          },
          "dependencies": [
            "aws_network_interface.nic",
            "aws_security_group.allow_web",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b9a603c10937a61b",
            "arn": "arn:aws:ec2:us-east-1:994360724404:instance/i-02b1402757b790c4c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02b1402757b790c4c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "v-main-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0dd9ec3c25cb446ca"
              }
            ],
            "primary_network_interface_id": "eni-0dd9ec3c25cb446ca",
            "private_dns": "ip-10-123-10-50.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.123.10.50",
            "public_dns": "ec2-3-80-194-145.compute-1.amazonaws.com",
            "public_ip": "3.80.194.145",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00eb2d2cc9f9f4d9c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-085abaf3e057d24a0",
            "tags": {
              "Name": "ubuntu_web_server"
            },
            "tags_all": {
              "Name": "ubuntu_web_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0468a52361e53b3a8"
            ]
          },
          "dependencies": [
            "aws_network_interface.nic_2",
            "aws_security_group.allow_web",
            "aws_subnet.public_subnet_2",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:994360724404:internet-gateway/igw-025a22aba1e0d8339",
            "id": "igw-025a22aba1e0d8339",
            "owner_id": "994360724404",
            "tags": {
              "Environment": "swift",
              "Name": "swift-igw"
            },
            "tags_all": {
              "Environment": "swift",
              "Name": "swift-igw"
            },
            "vpc_id": "vpc-0dc465fc49bdd1ebf"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:994360724404:loadbalancer/app/web-app-lb/8fae0f47b9ea39b4",
            "arn_suffix": "app/web-app-lb/8fae0f47b9ea39b4",
            "desync_mitigation_mode": "defensive",
            "dns_name": "web-app-lb-1103909430.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:994360724404:loadbalancer/app/web-app-lb/8fae0f47b9ea39b4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "web-app-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-09f36af5268542ab8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-037996708ecf0bb60"
              },
              {
                "subnet_id": "subnet-085abaf3e057d24a0"
              }
            ],
            "subnets": [
              "subnet-037996708ecf0bb60",
              "subnet-085abaf3e057d24a0"
            ],
            "tags": {
              "Environment": "swift"
            },
            "tags_all": {
              "Environment": "swift"
            },
            "vpc_id": "vpc-0dc465fc49bdd1ebf",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_allow_web",
            "aws_subnet.public_subnet",
            "aws_subnet.public_subnet_2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:994360724404:listener/app/web-app-lb/8fae0f47b9ea39b4/232fcc240791baca",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404: Page is not found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:994360724404:listener/app/web-app-lb/8fae0f47b9ea39b4/232fcc240791baca",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:994360724404:loadbalancer/app/web-app-lb/8fae0f47b9ea39b4",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.front_end",
            "aws_security_group.alb_allow_web",
            "aws_subnet.public_subnet",
            "aws_subnet.public_subnet_2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "static",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:994360724404:targetgroup/front-end-tg/351e6722f2223890",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:994360724404:listener-rule/app/web-app-lb/8fae0f47b9ea39b4/232fcc240791baca/3dabb62bd1e303af",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:994360724404:listener-rule/app/web-app-lb/8fae0f47b9ea39b4/232fcc240791baca/3dabb62bd1e303af",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:994360724404:listener/app/web-app-lb/8fae0f47b9ea39b4/232fcc240791baca",
            "priority": 100,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.front_end",
            "aws_lb_listener.front_end",
            "aws_lb_target_group.front_end",
            "aws_security_group.alb_allow_web",
            "aws_subnet.public_subnet",
            "aws_subnet.public_subnet_2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:994360724404:targetgroup/front-end-tg/351e6722f2223890",
            "arn_suffix": "targetgroup/front-end-tg/351e6722f2223890",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:994360724404:targetgroup/front-end-tg/351e6722f2223890",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "front-end-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0dc465fc49bdd1ebf"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "front_end_instance_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:994360724404:targetgroup/front-end-tg/351e6722f2223890-20221112231641580200000010",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:994360724404:targetgroup/front-end-tg/351e6722f2223890",
            "target_id": "i-0d2c384fa2d8a9d2f"
          },
          "dependencies": [
            "aws_instance.web_server",
            "aws_lb_target_group.front_end",
            "aws_network_interface.nic",
            "aws_security_group.allow_web",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "front_end_instance_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:994360724404:targetgroup/front-end-tg/351e6722f2223890-2022111223164026190000000f",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:994360724404:targetgroup/front-end-tg/351e6722f2223890",
            "target_id": "i-02b1402757b790c4c"
          },
          "dependencies": [
            "aws_instance.web_server_2",
            "aws_lb_target_group.front_end",
            "aws_network_interface.nic_2",
            "aws_security_group.allow_web",
            "aws_subnet.public_subnet_2",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-034ef063f3c627069",
            "connectivity_type": "public",
            "id": "nat-020d45b684d2422c0",
            "network_interface_id": "eni-0226084131cfaa28e",
            "private_ip": "10.123.1.213",
            "public_ip": "3.233.188.6",
            "subnet_id": "subnet-037996708ecf0bb60",
            "tags": {
              "Environment": "swift",
              "Name": "nat"
            },
            "tags_all": {
              "Environment": "swift",
              "Name": "nat"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:994360724404:network-interface/eni-057d91a3e341ea022",
            "id": "eni-057d91a3e341ea022",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:a0:9c:af:7f:3f",
            "owner_id": "994360724404",
            "private_dns_name": "ip-10-123-1-50.ec2.internal",
            "private_ip": "10.123.1.50",
            "private_ip_list": [
              "10.123.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.123.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0468a52361e53b3a8"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-037996708ecf0bb60",
            "tags": {
              "Name": "pub_network_interface"
            },
            "tags_all": {
              "Name": "pub_network_interface"
            }
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "nic_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:994360724404:network-interface/eni-0dd9ec3c25cb446ca",
            "id": "eni-0dd9ec3c25cb446ca",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "12:af:fc:24:e8:13",
            "owner_id": "994360724404",
            "private_dns_name": "ip-10-123-10-50.ec2.internal",
            "private_ip": "10.123.10.50",
            "private_ip_list": [
              "10.123.10.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.123.10.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0468a52361e53b3a8"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-085abaf3e057d24a0",
            "tags": {
              "Name": "pub_network_interface_2"
            },
            "tags_all": {
              "Name": "pub_network_interface_2"
            }
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.public_subnet_2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "nic_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:994360724404:network-interface/eni-02ca4558a78d3c993",
            "id": "eni-02ca4558a78d3c993",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:32:8c:b8:24:0d",
            "owner_id": "994360724404",
            "private_dns_name": "ip-10-123-2-50.ec2.internal",
            "private_ip": "10.123.2.50",
            "private_ip_list": [
              "10.123.2.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.123.2.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0eadd36fb70723d7f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e14f4f004e9284fb",
            "tags": {
              "Name": "private_network_interface"
            },
            "tags_all": {
              "Name": "private_network_interface"
            }
          },
          "dependencies": [
            "aws_security_group.allow_backend",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:994360724404:network-interface/eni-0c595f37be27184da",
            "id": "eni-0c595f37be27184da",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:dc:cb:7e:a8:29",
            "owner_id": "994360724404",
            "private_dns_name": "ip-10-123-2-51.ec2.internal",
            "private_ip": "10.123.2.51",
            "private_ip_list": [
              "10.123.2.51"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.123.2.51"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0eadd36fb70723d7f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e14f4f004e9284fb",
            "tags": {
              "Name": "private_network_interface"
            },
            "tags_all": {
              "Name": "private_network_interface"
            }
          },
          "dependencies": [
            "aws_security_group.allow_backend",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:994360724404:network-interface/eni-060987baa1bbfc5e3",
            "id": "eni-060987baa1bbfc5e3",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:a4:14:c5:ec:a9",
            "owner_id": "994360724404",
            "private_dns_name": "ip-10-123-2-52.ec2.internal",
            "private_ip": "10.123.2.52",
            "private_ip_list": [
              "10.123.2.52"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.123.2.52"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0eadd36fb70723d7f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e14f4f004e9284fb",
            "tags": {
              "Name": "private_network_interface"
            },
            "tags_all": {
              "Name": "private_network_interface"
            }
          },
          "dependencies": [
            "aws_security_group.allow_backend",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:994360724404:network-interface/eni-00828ffec9d18244a",
            "id": "eni-00828ffec9d18244a",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:cd:fe:c2:3c:f5",
            "owner_id": "994360724404",
            "private_dns_name": "ip-10-123-2-53.ec2.internal",
            "private_ip": "10.123.2.53",
            "private_ip_list": [
              "10.123.2.53"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.123.2.53"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0eadd36fb70723d7f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e14f4f004e9284fb",
            "tags": {
              "Name": "private_network_interface"
            },
            "tags_all": {
              "Name": "private_network_interface"
            }
          },
          "dependencies": [
            "aws_security_group.allow_backend",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a1efe4f2d80aec0a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-020d45b684d2422c0",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a1efe4f2d80aec0a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-025a22aba1e0d8339",
            "id": "r-rtb-08aac4d695441c7f21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08aac4d695441c7f2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:994360724404:route-table/rtb-0a1efe4f2d80aec0a",
            "id": "rtb-0a1efe4f2d80aec0a",
            "owner_id": "994360724404",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "swift",
              "Name": "swift-private-route-table"
            },
            "tags_all": {
              "Environment": "swift",
              "Name": "swift-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc465fc49bdd1ebf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:994360724404:route-table/rtb-08aac4d695441c7f2",
            "id": "rtb-08aac4d695441c7f2",
            "owner_id": "994360724404",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "swift",
              "Name": "swift-public-route-table"
            },
            "tags_all": {
              "Environment": "swift",
              "Name": "swift-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc465fc49bdd1ebf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-042b442d3370aa296",
            "route_table_id": "rtb-0a1efe4f2d80aec0a",
            "subnet_id": "subnet-0e14f4f004e9284fb"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b922ae5d1b72ecfc",
            "route_table_id": "rtb-08aac4d695441c7f2",
            "subnet_id": "subnet-037996708ecf0bb60"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b8db6dfb0d348172",
            "route_table_id": "rtb-08aac4d695441c7f2",
            "subnet_id": "subnet-085abaf3e057d24a0"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_subnet_2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:994360724404:security-group/sg-09f36af5268542ab8",
            "description": "Allow web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09f36af5268542ab8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alb_allow_web",
            "name_prefix": "",
            "owner_id": "994360724404",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb_allow_web"
            },
            "tags_all": {
              "Name": "alb_allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc465fc49bdd1ebf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:994360724404:security-group/sg-0eadd36fb70723d7f",
            "description": "Allow inbound frontend traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eadd36fb70723d7f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5020
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_backend",
            "name_prefix": "",
            "owner_id": "994360724404",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_backend"
            },
            "tags_all": {
              "Name": "allow_backend"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc465fc49bdd1ebf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:994360724404:security-group/sg-0468a52361e53b3a8",
            "description": "Allow web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0468a52361e53b3a8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web",
            "name_prefix": "",
            "owner_id": "994360724404",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "tags_all": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc465fc49bdd1ebf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:994360724404:security-group/sg-0f1ca089dbe414ea8",
            "description": "Default security group to allow inbound/outbound from the VPC",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-0f1ca089dbe414ea8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "swift-default-sg",
            "name_prefix": "",
            "owner_id": "994360724404",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "swift"
            },
            "tags_all": {
              "Environment": "swift"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc465fc49bdd1ebf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:994360724404:subnet/subnet-0e14f4f004e9284fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.123.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e14f4f004e9284fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "994360724404",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "swift",
              "Name": "swift-us-east-1a-private-subnet"
            },
            "tags_all": {
              "Environment": "swift",
              "Name": "swift-us-east-1a-private-subnet"
            },
            "vpc_id": "vpc-0dc465fc49bdd1ebf"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:994360724404:subnet/subnet-037996708ecf0bb60",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.123.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-037996708ecf0bb60",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "994360724404",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "swift",
              "Name": "swift-us-east-1a-public-subnet"
            },
            "tags_all": {
              "Environment": "swift",
              "Name": "swift-us-east-1a-public-subnet"
            },
            "vpc_id": "vpc-0dc465fc49bdd1ebf"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:994360724404:subnet/subnet-085abaf3e057d24a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.123.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-085abaf3e057d24a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "994360724404",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "swift",
              "Name": "swift-us-east-1b-public-subnet"
            },
            "tags_all": {
              "Environment": "swift",
              "Name": "swift-us-east-1b-public-subnet"
            },
            "vpc_id": "vpc-0dc465fc49bdd1ebf"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:994360724404:vpc/vpc-0dc465fc49bdd1ebf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.123.0.0/16",
            "default_network_acl_id": "acl-0e129f8ff1a2a1a0d",
            "default_route_table_id": "rtb-00a30b2d3fa3f5c8c",
            "default_security_group_id": "sg-02c3fd60e9f314894",
            "dhcp_options_id": "dopt-057b0e0c07460e5a1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dc465fc49bdd1ebf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00a30b2d3fa3f5c8c",
            "owner_id": "994360724404",
            "tags": {
              "Name": "us-east-1-vpc"
            },
            "tags_all": {
              "Name": "us-east-1-vpc"
            }
          }
        }
      ]
    }
  ]
}